--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -79,6 +79,8 @@ copyright = ""            # default: author.name ↓        # 默认为下面配
   baidu_analytics = ""      # Baidu Analytics
   baidu_verification = ""   # Baidu Verification
   google_verification = ""  # Google_Verification         # 谷歌
+  Valine_leancloudAppid=""   #Valine评论系统：https://valine.js.org
+  Valine_leancloudAppkey=""
 
   [params.publicCDN]        # load these files from public cdn                          # 启用公共CDN，需自行定义
     enable = false
